<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ssdev.persiantext2speech.Activities.Step3Activity"
    android:gravity="center_vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMMS"
        android:layout_gravity="center_horizontal"
        android:text="@string/mms"
        android:textColor="#010000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnWhatsapp"
        android:layout_gravity="center_horizontal"
        android:text="@string/whatsapp"
        android:textColor="#010000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telegram"
        android:id="@+id/btnTelegram"
        android:layout_gravity="center_horizontal"
        android:textColor="#010000" />
</LinearLayout>
