<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Step1"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textColor="#020000" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/txtMatn"
        android:layout_gravity="center_horizontal"
        android:minLines="3"
        android:textColor="#020000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Step2"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textColor="#020000"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnPunc"
        android:layout_gravity="center_horizontal"
        android:spinnerMode="dialog"
        android:entries="@array/Punctuation" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/rate"
                android:id="@+id/textView4"
                android:textColor="#040000" />

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:id="@+id/npr" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/pitch"
                android:id="@+id/textView3"
                android:textColor="#040000" />

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:id="@+id/npp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/volume"
                android:id="@+id/textView5"
                android:textColor="#040000" />

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:id="@+id/npv" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="تبدیل"
        android:id="@+id/btnRead"
        android:layout_gravity="center_horizontal"
        android:textColor="#020000"
        android:layout_marginTop="20dp" />
</LinearLayout>
